--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@nuxtjs/axios": "^5.0.0",
+    "normalize.css": "^8.0.0",
     "nuxt": "^1.3.0",
     "nuxt-property-decorator": "^1.2.0",
     "vuex-class": "^0.3.0"
@@ -20,7 +21,9 @@
   },
   "devDependencies": {
     "@types/node": "^9.4.6",
+    "node-sass": "^4.9.3",
     "push-dir": "^0.4.1",
+    "sass-loader": "^7.1.0",
     "ts-loader": "^3.5.0",
     "typescript": "^2.7.2"
   }
