--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@nuxtjs/axios": "^5.0.0",
+    "@nuxtjs/google-analytics": "^2.0.2",
     "normalize.css": "^8.0.0",
     "nuxt": "^1.3.0",
     "nuxt-property-decorator": "^1.2.0",
