--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.0.0",
     "@nuxtjs/google-analytics": "^2.0.2",
-    "markdown-it": "^8.4.2",
+    "@nuxtjs/markdownit": "^1.2.1",
     "normalize.css": "^8.0.0",
     "nuxt": "^1.3.0",
     "nuxt-property-decorator": "^1.2.0",
@@ -21,13 +21,11 @@
     "build:gh-pages": "DEPLOY_ENV=GH=PAGES nuxt build",
     "generate:gh-pages": "DEPLOY_ENV=GH_PAGES nuxt generate",
     "predeploy": "yarn generate:gh-pages",
-    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup",
-    "processmd": "processmd 'markdown/**/*.{yml,md}' --stdout --outputDir static/json > static/json/summary.json"
+    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "devDependencies": {
     "@types/node": "^9.4.6",
     "node-sass": "^4.9.3",
-    "processmd": "^4.2.1",
     "push-dir": "^0.4.1",
     "sass-loader": "^7.1.0",
     "ts-loader": "^3.5.0",
