--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
     "@nuxtjs/axios": "^5.0.0",
     "@nuxtjs/google-analytics": "^2.0.2",
     "@nuxtjs/markdownit": "^1.2.1",
+    "date-fns": "^1.29.0",
+    "front-matter": "^2.3.0",
+    "markdown-it-attrs": "^2.3.1",
+    "markdown-it-container": "^2.0.0",
+    "markdown-it-meta": "^0.0.1",
     "normalize.css": "^8.0.0",
     "nuxt": "^1.3.0",
     "nuxt-property-decorator": "^1.2.0",
