--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "front-matter": "^2.3.0",
     "markdown-it-attrs": "^2.3.1",
     "markdown-it-container": "^2.0.0",
+    "markdown-it-highlightjs": "^3.0.0",
     "markdown-it-meta": "^0.0.1",
     "normalize.css": "^8.0.0",
     "nuxt": "^1.3.0",
